bogacontest modal fixed bug fix on mobile

--- a/wp-content/plugins/boga-contest/assets/css/bogacontest.css
+++ b/wp-content/plugins/boga-contest/assets/css/bogacontest.css
@@ -216,22 +216,27 @@ input[type="color"]:focus,
         min-height: 300px;
     }
 }
-@media screen and (min-width: 701px){
-    #bogacontest_login_modal{
+@media screen and (min-width: 701px) {
+    #bogacontest_login_modal {
         top: 3% !important;
     }
+
     .modal-dialog {
         width: 50% !important;
     }
-    #current-user-data-holder{
+
+    #current-user-data-holder {
         margin-bottom: 70px;
     }
-    #bogacontest_login_modal_dialog{
+
+    #bogacontest_login_modal_dialog {
         min-height: 400px;
     }
-/*    #gallery{
-        padding-right: 45px !important;
-    }}*/
+
+    /*    #gallery{
+            padding-right: 45px !important;
+        }}*/
+}
 #bogacontest_login_modal{
     position: fixed;
 }
